2005-08-09  Vladimir Vukicevic  <vladimir@pobox.com>

	* src/cairo-glitz-surface.c: Don't crash on 0-width or 0-height
	glyphs; also correctly initialize entry->key.base.memory with the
	image cache image.

	* src/cairo-xlib-surface.c (_xlib_glyphset_cache_create_entry):
	Free allocated entry in case of error to avoid leaking memory.

2005-08-09  Carl Worth  <cworth@cworth.org>

	* src/cairo-arc-private.h:
	* src/cairo-ft-private.h:
	* src/cairo-meta-surface-private.h:
	* src/cairoint.h: Add cairo_private to several function prototypes
	that were missing it.

2005-08-09  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that sane clipping is done now. Add release
	versions for previously completed items.

	* test/.cvsignore: Ignore unantialiased-shapes.

2005-07-29  T Rowley  <tim.rowley@gmail.com>

	* src/cairo-atsui-font.c (_cairo_atsui_font_create_toy):
	Get cairo_toy_font_face_t type right.

2005-08-09  Carl Worth  <cworth@cworth.org>

	* configure.in: Add -head to CAIRO_VERSION after tagging with
	RELEASE_0_9_0.

2005-08-08  Carl Worth  <cworth@cworth.org>

	* NEWS: Added notes for release 0.9.0.

	* configure.in: Increment CAIRO_VERSION to 0.9.0. Increment
	LT_CURRENT to 2 to mark the beginning of proper soname management.

2005-08-08  Carl Worth  <cworth@cworth.org>

	* src/Makefile.am (libcairo_la_SOURCES): Add missing cairo-debug.h
	which was hold up make distcheck.

2005-08-08  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am (EXTRA_DIST): Fix typo that was holding up make
	distcheck from working.

2005-08-08  Billy Biggs  <vektor@dumbterm.net>

	* src/cairo-path-data-private.h: Declare _cairo_path_nil as extern.

2005-08-08  Billy Biggs  <vektor@dumbterm.net>

	reviewed by: cworth, otaylor

	* src/cairo.c: (cairo_set_antialias), (cairo_get_antialias):
	* src/cairo.h: Add a new API for disabling antialiasing of shapes
	drawn by cairo.  This is a hint and is not supported by all backends.

	* src/cairoint.h:
	* src/cairo-gstate-private.h: